# DeviceAddressTweaker

./: .gitignore  README.md  build.gradle  gradle.7z  local.properties  settings.gradle
app/: build.gradle
app/dobby/: dobby.h
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  Utils.h  datutils.cpp  datutils.h  deviceaddresstweaker.cpp  deviceaddresstweaker.h  proot-note-logger.h
app/src/main/cpp/Dobby-master/builtin-plugin/ImportTableReplace/: dobby_import_replace.cc
app/src/main/cpp/Dobby-master/builtin-plugin/SupervisorCallMonitor/: misc_utility.h  sensitive_api_monitor.cc  supervisor_call_monitor.cc
app/src/main/cpp/Dobby-master/examples/: socket_example.cc
app/src/main/cpp/Dobby-master/include/: dobby.h
app/src/main/cpp/Dobby-master/source/Backend/KernelMode/PlatformUtil/Darwin/: ProcessRuntimeUtility.cc
app/src/main/cpp/Dobby-master/source/Backend/KernelMode/UnifiedInterface/: platform-darwin.cc
app/src/main/cpp/Dobby-master/source/Backend/UserMode/ExecMemory/: code-patch-tool-darwin.cc
app/src/main/cpp/Dobby-master/source/Backend/UserMode/UnifiedInterface/: platform-posix.cc
app/src/main/cpp/Dobby-master/source/InstructionRelocation/x86/deprecated/: X86OpcodoDecodeTable.cc
app/src/main/cpp/Dobby-master/source/include/: platform_header.h
app/src/main/cpp/Dobby-master/tests/: UniconEmulator.cpp
app/src/main/cpp/android/: sysPropSet.cpp  sysPropSet.h
app/src/main/cpp/android/nativehelper/: ALog-priv.h  JNIHelp.cpp  JNIHelp.h  JniConstants.cpp  JniConstants.h  JniInvocation.cpp  JniInvocation.h  ScopedLocalRef.h  ScopedPrimitiveArray.h  ScopedUtfChars.h
app/src/main/cpp/libarchive-master/libarchive/: archive_read_disk.3  archive_read_disk_windows.c  archive_read_support_filter_lzop.c  archive_util.c  archive_write_disk_windows.c
app/src/main/cpp/proot/src/: .check_process_vm.c  arch.h
app/src/main/cpp/proot/src/cli/: care.c  care.h  cli.c  cli.h  note.c  note.h  proot.c  proot.h
app/src/main/cpp/proot/src/execve/: aoxp.c  aoxp.h  auxv.c  auxv.h  elf.c  elf.h  enter.c  execve.h  exit.c  ldso.c  ldso.h  shebang.c  shebang.h
app/src/main/cpp/proot/src/extension/: extension.c  extension.h
app/src/main/cpp/proot/src/extension/care/: archive.c  archive.h  care.c  care.h  extract.c  extract.h  final.c
app/src/main/cpp/proot/src/extension/fake_id0/: fake_id0.c
app/src/main/cpp/proot/src/extension/kompat/: kompat.c
app/src/main/cpp/proot/src/extension/link2symlink/: link2symlink.c
app/src/main/cpp/proot/src/extension/portmap/: map.c  portmap.c  portmap.h
app/src/main/cpp/proot/src/path/: binding.c  binding.h  canon.c  canon.h  glue.c  glue.h  path.c  path.h  proc.c  proc.h  temp.c  temp.h
app/src/main/cpp/proot/src/ptrace/: ptrace.c  ptrace.h  user.c  user.h  wait.c  wait.h
app/src/main/cpp/proot/src/syscall/: chain.c  chain.h  enter.c  exit.c  heap.c  heap.h  rlimit.c  rlimit.h  seccomp.c  seccomp.h  socket.c  socket.h  syscall.c  syscall.h  sysnum.c  sysnum.h  sysnums-arm.h  sysnums-arm64.h  sysnums-i386.h  sysnums-sh4.h  sysnums-x32.h  sysnums-x86_64.h
app/src/main/cpp/proot/src/tracee/: abi.h  event.c  event.h  mem.c  mem.h  reg.c  reg.h  tracee.c  tracee.h
app/src/main/cpp/proot/test/: ptrace-2.c  test-66666666.c  test-af062114.c  test-ptrace00.c
app/src/main/cpp/talloc/: talloc.cpp
app/src/main/cpp/uthash/: uthash.h
app/src/main/java/com/linearity/deviceaddresstweaker/: Base58Util.java  ColorUtils.java  DeviceAddressTweaker.java  LoggerUtils.java  SM2EncryptUtils.java  SettingAdapter.java  SettingsGUI.java  TemplateTag.java
app/src/main/java/com/linearity/deviceaddresstweaker/AndroidHooks/android/: HookForSystem.java
app/src/main/java/com/linearity/deviceaddresstweaker/AndroidHooks/android/accessibilityservice/: HookAccessibilityClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/AndroidHooks/android/accounts/: HookAccountClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/AndroidHooks/android/app/: HookActivityThreadClass.java  (+1 more)
app/src/main/java/com/linearity/deviceaddresstweaker/StrangeHook/: StrangeHookClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/TIM/: FilterHashmap.java  HookTIMClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/TIM/TIMUtils/: CacheInfo.java  HashMapInfo.java  IMemoryManager.java  LruCacheInfo.java  QQConcurrentHashMap.java  QQHashMap.java  QQLruCache.java  Sizeable.java
app/src/main/java/com/linearity/deviceaddresstweaker/Wechat/: HookWechatClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/bilibili/: HookBilibiliClass.java
app/src/main/java/com/linearity/deviceaddresstweaker/chaoxing/: HookChaoxingClass.java
app/src/main/java/com/linearity/utils/: Base58Util.java  ExtendedSecureRandom.java  FakeProcInfoGenerator.java  FakeSystemProperties.java  HookUtils.java  HookerThread.java  ListenerHashMap.java  LoggerUtils.java  ReturnReplacements.java
app/src/main/java/com/linearity/utils/FakeClass/FakeReturnClasses/: FakeReturnClassMap.java
app/src/main/java/com/linearity/utils/FakeInfo/: FakeProcInfoGenerator.java  FakeProviderSettings.java  FakeSystemProperties.java
app/src/main/java/com/linearity/utils/ListenerUtils/: ListenerByteArrayOutputStream.java  ListenerHashMap.java
app/src/main/res/color/: skin_black.xml
app/src/main/res/drawable/: aeq.xml  bg_maillist_addaccount.xml  chat_input_bar_bg_big.xml  di4.xml  e0.xml  gxb.xml  hco.xml  je.xml  pink_dot.xml  profile_bg.xml
app/src/main/res/drawable-mdpi/: bg_texture_by_fenghu_2.xml
app/src/main/res/drawable-xhdpi/: _bg_texture__by_pixiv_uid_14270992_2.xml  bg_texture_by_fenghu.xml  bg_texture_by_pixiv_userid_1599876.xml
app/src/main/res/drawable-xxxhdpi/: bg_texture_by_pixiv_uid_14270992.xml  profile_bg_by_pixiv_procrastinator_userid_83351375.xml
app/src/main/res/layout/: cod.xml  coe.xml  option_item.xml  settings.xml
app/src/main/res/values/: colors.xml  strings.xml  style.xml
gradle/wrapper/: gradle-wrapper.properties
(+49 files in other folders)
